<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Revisit</string>

    <string name="title_activity_site_list">Sites</string>
    <string name="title_activity_map">Site Map</string>
    <string name="title_site_detail">Site Detail</string>
    <string name="title_site_map_list">Select Site</string>
    <string name="title_add_site">Add Site</string>
    <string name="title_select_offline">Download Map</string>    
    <string name="title_splash">Revisit</string>
    
    <string name="action_mylocation">Zoom to my location</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_upload_sites">Upload Sites</string>
    
    
    <string name="add_button_text">Add new site</string>
    <string name="submit_add_button_text">Submit site</string>
    <string name="back_to_accept_button_text">Adjust location</string>
    <string name="accept_location_button_text">Accept location</string>
    <string name="checkin_button">Select site</string>
    
    <string name="site_icon_desc">Site Type</string>
    <string name="add_site_title">Add New Site</string>
    <string name="add_instructions_1">Your current location</string>
    <string name="add_instructions_2">Drag pin to adjust location</string>
    <string name="add_site_name">Name</string>
    <string name="add_site_type">Type</string>
    <string name="add_site_sector">Sector</string>
    <string name="add_site_location">Location</string>
    
    <string name="capture_image">Add photo</string>
    <string name="no_images">No images are available for this site.</string>
    

    
    <!-- Splash -->
    <string name="splash_welcome">Thanks for visiting</string>
    <string name="select_offline_button">Download map for offline use</string>
    <string name="view_offline_button">View offline map</string>
    <string name="settings_button">Settings</string>
    <string name="sync_sites_button">Upload sites to registry</string>
    <string name="tour_button">Take the tour</string>
    
    
    <!-- Offline Download -->
    <string name="download_map_instructions_1">Drag and zoom to adjust map</string>
    <string name="download_map_instructions_2">Anything outside window will not be downloaded</string>
    <string name="download_button">Download map</string>
    
    
    <!-- Search -->
    <string name="search_hint">Search Sites&#8230;</string>
    <string name="action_search">Search Sites</string>
    
    <string-array name="sectors_array">
        <item>health</item>
        <item>education</item>
        <item>water and sanitation</item>
        <item>energy</item>
        <item>shelter</item>
        <item>agriculture</item>
        <item>finance</item>
        <item>human rights</item>
        <item>transportation</item>
        <item>communications</item>
    </string-array>
    
	<!-- PREFERENCES -->
	<string name="tile_server_url_title">Tile Server URL</string>
	<string name="tile_server_url_summary">The base URL from which the tiles should be fetched.</string>
	<string name="site_server_url_title">Site Registry Server URL</string>
	<string name="site_server_url_summary">The base URL for the Site Registry API to be used.</string>
    
    
</resources>
