<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item
        android:id="@+id/action_mylocation"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_mylocation"
        android:showAsAction="ifRoom" />    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never" />

</menu>