<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/fragment_map"
        android:name="edu.columbia.sel.revisit.fragment.AddSiteMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="10dp" >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/add_site_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <edu.columbia.sel.revisit.view.NoDefaultSpinner
            android:id="@+id/sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginBottom="10dp"
            android:prompt="@string/add_site_sector" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sector"
            android:layout_marginBottom="10dp"
            android:hint="@string/add_site_type"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <!-- <LinearLayout
            android:id="@+id/location_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/location"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/add_site_location"
                android:inputType="text"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/get_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Use current location"
                android:onClick="onPopulateLocationClick"
                android:src="@drawable/ic_action_location_found" />
        </LinearLayout> -->
    </RelativeLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/gray_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="onAddNewSite"
        android:text="@string/submit_add_button_text" />

</LinearLayout>